# colorphoto-s

./: .gitignore  README.md
colorphoto-tauri/: function_analysis.md  index.html  package-lock.json  package.json
colorphoto-tauri/src/: index.css  main.ts
colorphoto-tauri/src-tauri/: Cargo.toml  tauri.conf.json
colorphoto-tauri/src-tauri/capabilities/: default.json
colorphoto-tauri/src-tauri/icons/: icon.icns
colorphoto-tauri/src-tauri/src/: lib.rs  main.rs
colorphoto-tauri/src/components/: ControlPanel.ts  DropZone.ts  ImagePreview.ts
colorphoto-tauri/src/utils/: colorExtractor.ts  imageProcessor.ts  x11Colors.ts
