[package]
name = "colorphoto-tauri"
version = "2.0.0"
description = "ColorPhoto - 图片颜色提取工具"
authors = ["ColorPhoto"]
edition = "2021"

[lib]
name = "colorphoto_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
kamadak-exif = "0.6"
image = "0.25"
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
